<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/lookup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/numbers_lookup"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/korean_numbers_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/numbers_korean"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/sino_korean_numbers_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/numbers_sino_korean"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/time"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

</LinearLayout>