<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/lookup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/vocab_list"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/korean_to_english_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/vocab_korean_to_english"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/english_to_korean_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/vocab_english_to_korean"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/flashcards_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/vocab_flashcards"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

</LinearLayout>